# NDK_OpenGL

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mihoyo/myapplication/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/mihoyo/opengl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniImpl.cpp  native-lib.cpp
app/src/main/cpp/render/: MyGLRenderContext.cpp  MyGLRenderContext.h
app/src/main/cpp/sample/: GLSampleBase.h  TriangleSample.cpp  TriangleSample.h
app/src/main/cpp/util/: GLUtils.cpp  GLUtils.h  LogUtil.h
app/src/main/java/com/mihoyo/myapplication/: MainActivity.kt
app/src/main/java/com/mihoyo/opengl/: MainActivity.kt
app/src/main/java/com/mihoyo/opengl/activity/: EglShape3Activity.kt  EglShapeActivity.kt
app/src/main/java/com/mihoyo/opengl/core/: MyNativeRender.kt
app/src/main/java/com/mihoyo/opengl/render/: Triangle.kt
app/src/main/java/com/mihoyo/opengl/utils/: ShaderUtil.kt
app/src/main/res/layout/: activity_egl_shape.xml  activity_egl_shape3.xml  activity_main.xml
app/src/test/java/com/mihoyo/myapplication/: ExampleUnitTest.kt
app/src/test/java/com/mihoyo/opengl/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
